src/frontend/k8s/deployment.ci-poc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resourcesapp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: resourcesapp
  template:
    metadata:
      labels:
        app: resourcesapp
    spec:
      volumes:
      - name: resources-app-env-config
        configMap:
          name: resources-app-env-cfg
      containers:
      - name: resourcesapp
        image: fusioncr.azurecr.io/apps/fusion-app-resources:20190822.1
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: resources-app-env-config
          mountPath: "/app/static/config"
        resources:
          requests:
            memory: "250Mi"
            cpu: "120m"
          limits:
            memory: "500Mi"
            cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: resourcesapp
spec:
  selector:
    app: resourcesapp
  ports:
  - port: 80
    targetPort: 3000


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: resources-app-fusion-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.org/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
  - hosts:
    - resources-app.ci.fusion-dev.net
    secretName: ci.fusion-dev.net-tls
  rules:
    - host: resources-app.ci.fusion-dev.net
      http:
        paths:
        - path: /
          backend:
            serviceName: resourcesapp
            servicePort: 80
